# git-github.com-nkjcqvcpi-apfsRelic

./: .gitignore  Cargo.toml  Makefile  README.md  apfsRelic.code-workspace
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/src/commands/: inspect.rs  ls.rs  mod.rs  partitions.rs  recover.rs  snapshots.rs  stat.rs  verify.rs  volumes.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  json.rs  lib.rs  source.rs
crates/core/src/apfs/: btree.rs  checksum.rs  container.rs  extract.rs  feature.rs  jrec.rs  mod.rs  nx.rs  obj.rs  omap.rs  path.rs  raw.rs  resolver.rs  snapshot.rs  time.rs  vol.rs  volume.rs  xfield.rs
crates/core/src/device/: mod.rs  offset.rs  partition.rs  raw.rs  sparsebundle.rs
crates/core/tests/: engine.rs  fuzz_smoke.rs  gpt.rs
crates/core/tests/common/: mod.rs
crates/gui/: Cargo.toml  tauri.conf.json
crates/gui/capabilities/: default.json
crates/gui/src/: commands.rs  main.rs  recents.rs
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/icons/: icon.icns
frontend/src/: App.tsx  index.scss  main.tsx
frontend/src/components/: AppHeader.tsx  DirContents.tsx  DirTree.tsx  InfoPanel.tsx  StartPage.tsx  Toasts.tsx  Toolbar.tsx
frontend/src/lib/: format.ts  tauri.ts  types.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_btree.rs  parse_records.rs
