# cargo-fuzz harness (requires nightly: `cargo +nightly fuzz run parse_btree`).
# Kept out of the main workspace so `cargo build`/`cargo test` don't need nightly.
[package]
name = "apfsrelic-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.apfsrelic-core]
path = "../crates/core"

[[bin]]
name = "parse_btree"
path = "fuzz_targets/parse_btree.rs"
test = false
doc = false

[[bin]]
name = "parse_records"
path = "fuzz_targets/parse_records.rs"
test = false
doc = false

[workspace]
